Fix header stack bug on mobile resolution

--- a/public/css/layout-basic.css
+++ b/public/css/layout-basic.css
@@ -18,7 +18,8 @@
 
 @media (max-width: 410px) {
     nav {
-        max-width: 100vw;
+        /*max-width: 100vw;*/
+        flex-wrap: nowrap;
     }
 }
 
